# Better-Linux-CAD

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: block106-dispatch-ready.txt  block106-finalize-trigger.txt
.github/workflows/: block-108-core-verify.yml  block106-finalize.yml  block106-manual-finalize.yml  block106-pr-verify.yml  block106-verify.yml  block108-core-verify.yml  block109-core-verify.yml  block110-doc-patch.yml  block110-final-verify.yml  block110-fix-lifecycle.yml  block110-fix-test.yml  block110-fix-toolbar-visibility.yml  block110-gui-verify.yml  block110-register-test.yml  block110-source-patch.yml  block38-bootstrap.yml  block38-geometry-verify.yml  block38-patch.yml  block39-bootstrap.yml  block39-patch.yml
assets/gui/: README.md
docs/: .assembly-diagnostics-implementation-marker  .block31-pr-marker.tmp  advanced-surfacing-and-3d-sketch-mvp.md  arc-and-trim-extend-sketch-profile-mvp.md  architecture-summary.md  assembly-angle-constraint-mvp5.md  assembly-concentric-numeric-solver-dof-mvp5.md  assembly-constraint-graph-mvp5.md  assembly-constraint-model-intent-mvp5.md  assembly-constraint-target-resolution-mvp5.md  assembly-contact-swept-motion-mvp5.md  assembly-cross-hierarchy-application-diagnostics-mvp5.md  assembly-cross-hierarchy-constraint-intent-mvp5.md  assembly-cross-hierarchy-constraint-json-mvp5.md  assembly-cross-hierarchy-incidence-groups-mvp5.md  assembly-cross-hierarchy-numeric-solver-mvp5.md  assembly-cross-hierarchy-relationship-semantics-mvp5.md  assembly-cross-hierarchy-revolute-motion-mvp5.md  assembly-cross-hierarchy-solver-sequence-mvp5.md  assembly-cylindrical-joint-mvp5.md  assembly-flexible-subassembly-solving-mvp5.md  assembly-general-geometric-target-roadmap.md  assembly-generated-topology-reference-mvp5.md  assembly-generic-relationship-equations-mvp5.md  assembly-generic-relationship-intent-mvp5.md  assembly-geometric-target-taxonomy-mvp5-block31-detail.md  assembly-geometric-target-taxonomy-mvp5.md  assembly-insert-intent-composite-residuals-mvp5.md  assembly-insert-numeric-solver-dof-mvp5.md  assembly-interference-analysis-mvp5.md  assembly-joint-coordinate-json-mvp5.md  assembly-joint-coordinate-model-mvp5.md  assembly-joint-target-compatibility-mvp5.md  assembly-parameters-mvp4.md  assembly-planar-constraint-equations-mvp5.md  assembly-planar-joint-mvp5.md  assembly-posed-step-export-mvp5.md  assembly-prismatic-joint-mvp5.md  assembly-reference-geometry-intent-mvp5.md  assembly-revolute-joint-motion-mvp5.md  (+175 more)
docs/decisions/: 0001-technology-baseline.md  0002-object-identity-and-naming.md  0003-units-and-quantities.md  0004-error-handling.md  0005-geometry-adapter-boundary.md  0006-mvp1-serialization-timing.md  0007-dependency-graph-scope.md  0008-part-document-dependency-graph-integration.md  0009-invalidation-state-scope.md  0010-recompute-plan-scope.md  0011-geometry-adapter-rectangle-extrusion.md  0012-shape-cache-scope.md  0013-additive-extrude-recompute-execution.md  0014-subtractive-extrude-recompute-execution.md  0015-step-export.md  0016-document-recompute-and-shape-cache-boundary.md  0017-parameter-value-update.md  0018-count-parameters-and-bolt-circle-pattern.md  0019-assembly-parameter-binding.md  README.md
docs/tutorials/: interactive-sketcher-planar-mvp8.md  interactive-sketcher-sketch3d-mvp8.md
downloads/apt/: README.md
examples/: arc_profile_prism.blcad.json  back_face_cut.blcad.json  blcad_analyze_assembly.cpp  blcad_export_posed_assembly.cpp  blcad_export_project.cpp  blcad_export_step.cpp  blcad_export_structured_assembly.cpp  blcad_inspect_project_components.cpp  blcad_move_joint.cpp  bolt_circle_plate.blcad.json  bottom_face_cut.blcad.json  component_instances.blcad.project.json  construction_plane_prism.blcad.json  flange_assembly.blcad.json  front_face_cut.blcad.json  generated_semantic_references.blcad.json  left_face_cut.blcad.json  nested_subassembly.blcad.project.json  posed_assembly.blcad.project.json  projected_sketch_references.blcad.json  reference_plate.blcad.json  revolute_joint.blcad.project.json  right_face_cut.blcad.json  spline_profile_prism.blcad.json  top_face_cut.blcad.json  triangle_cut_plate.blcad.json  triangle_prism.blcad.json
scripts/: apply_block38.py  apply_block39.py  normalize_block39.py  normalize_block39_builder_returns.py  normalize_block39_core_tests.py  normalize_block39_development_setup.py  normalize_block39_diagnostics_tests.py  normalize_block39_hierarchy.py  normalize_block39_numeric.py  normalize_block39_solver_assertions.py  normalize_block39_synthetic_targets.py  run_block39_ci.sh
src/core/: assembly_constraint.cpp  assembly_constraint_graph.cpp  assembly_constraint_graph_participation.hpp  assembly_cross_hierarchy_constraint_graph.cpp  assembly_cross_hierarchy_motion_graph.cpp  assembly_document.cpp  assembly_document_json.cpp  assembly_exchange_graph.cpp  assembly_hierarchy.cpp  assembly_joint.cpp  assembly_joint_graph.cpp  assembly_joint_json.cpp  assembly_joint_json.hpp  assembly_leaf_occurrence.cpp  assembly_reference_target.cpp  assembly_subassembly_instances.cpp  body.cpp  body_boolean_feature.cpp  body_transform.cpp  composite_closed_profile.cpp  construction_geometry.cpp  datum_axis.cpp  datum_plane.cpp  dependency_graph.cpp  draft_feature.cpp  edge_treatment_feature.cpp  error.cpp  feature.cpp  generated_topology_reference.cpp  invalidation_state.cpp  loft_feature.cpp  mirror_feature.cpp  parameter.cpp  parameter_expression.cpp  part_document.cpp  part_document_json.cpp  part_feature_input_reference.cpp  part_pattern_feature.cpp  path_curve.cpp  project.cpp  (+28 more)
src/geometry/: arc_closed_profile_adapter.cpp  assembly_concentric_constraint_equation_builder.cpp  assembly_constraint_equation_builder.cpp  assembly_constraint_numeric_system.cpp  assembly_constraint_numeric_system.hpp  assembly_constraint_target_resolver.cpp  assembly_contact_analyzer.cpp  assembly_cross_hierarchy_constraint_solver.cpp  assembly_cross_hierarchy_freshness.cpp  assembly_cross_hierarchy_freshness.hpp  (+87 more)
(+438 files in other folders)
